--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,4 +4,4 @@ sonar.projectVersion=1.0
 sonar.sources=src
 sonar.java.binaries=./target
 sonar.host.url=http://172.27.59.122:8081
-sonar.login=14c45eb1d959e677159b6f91bd7606bb1178b444
+sonar.login=
